--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /backend/node_modules/
 # /frontend/node_modules/
 /backend/.env
+/recommendation-system/tmdb_5000_movies.csv
+/recommendation-system/tmdb_5000_creadits.csv
